--- a/CommentedCode/02-Samplers/Optimization/FittingModelOptim.Rmd
+++ b/CommentedCode/02-Samplers/Optimization/FittingModelOptim.Rmd
@@ -18,7 +18,7 @@ rm(list=ls(all=TRUE))
 set.seed(123)
 ```
 
-# The model 
+## The model 
 
 Assume we want to fit a growth model to data. I am choosing here a logistic model for simplicty, but any other option would be fine as well. 
 
@@ -33,23 +33,22 @@ model <- function (N0 = 3, r=0.2, K=50, timesteps = 20){
 }
 ```
 
-# The data 
+## The data 
 
 For convenience, I create our data simply from the model and add some noise 
 
 ```{r}
 truth <- model(r = 0.25, K = 70, timesteps=100) 
-data <- truth[1:21] + rnorm(21) * rexp(21)
+data <- truth[1:21] + 2 * rnorm(21) * rexp(21)
 plot(data, ylab = "Time", xlab ="Size")
 ```
 
-For the noise, I have deliberately chosen not a normal distribution, but something that has more heavy tails
-
+For the noise, I have deliberately chosen not a normal distribution, but something that has more heavy tails to get a few "outliers".
 ```{r}
-hist(rnorm(1000, sd = 0.5) * rexp(1000), breaks = 50)
+hist(rnorm(1000) * rexp(1000), breaks = 50)
 ```
 
-# Objective function
+## Objective function
 
 In this case, we know of course the true parameters, but in any realistic situation we wouldn't. Hence, we need to be able to compare different parameterizations to the data. 
 
@@ -69,32 +68,21 @@ objective <- function(x){
 
 
 
-# Optimization 
+## Optimization 
 
-Trying to optimize by hand, and then by optimization
+To get a feeling for the problem, why not try optimization by hand before going to the optimizers? Take the code below and change the parameters!
 
 ```{r}
 
 plot(data, xlim = c(0,20), ylim = c(0,20))
 
-objective(c(5,0.4,40))
-lines(model(5,0.4,40), col = 1)
-
-objective(c(5,0.4,50))
-lines(model(5,0.4,50), col = 2)
-
-objective(c(4,0.4,50))
-lines(model(4,0.4,50), col = 3)
-
-objective(c(4,0.4,55))
-lines(model(4,0.4,55), col = 4)
-
-objective(c(4,0.4,60))
-lines(model(4,0.4,60), col = 5)
-
-legend("bottomright", c("5,0.4,40", "5,0.4,50", "4,0.4,50", "4,0.4,55", "4,0.4,60"), lwd = c(1,1,1,1,1), col = 1:5 )
+objective(c(5,0.2,40))
+lines(model(5,0.2,40), col = 1)
 
 ```
+
+OK, here comes the systematic optimization algorithm 
+
 
 ```{r}
 
@@ -119,19 +107,22 @@ Look at the help in optim and change the optimization algorithm. Do the results 
 plot(data, xlim = c(0,20), ylim = c(0,20))
 
 optimfit <- optim(c(1,1.3,40), objective, method = "Nelder-Mead")
-lines(model(optimfit$par[1], optimfit$par[2], optimfit$par[3], 40), col = "red", lwd = 2)
+lines(model(optimfit$par[1], optimfit$par[2], optimfit$par[3], 40), col = "red", lwd = 2, lty = 2)
 
 optimfit <- optim(c(1,1.3,40), objective, method = "SANN")
-lines(model(optimfit$par[1], optimfit$par[2], optimfit$par[3], 40), col = "red", lwd = 2)
+lines(model(optimfit$par[1], optimfit$par[2], optimfit$par[3], 40), col = "red", lwd = 2, lty = 3)
 
 optimfit <- optim(c(1,1.3,40), objective, method = "BFGS")
-lines(model(optimfit$par[1], optimfit$par[2], optimfit$par[3], 40), col = "red", lwd = 2)
+lines(model(optimfit$par[1], optimfit$par[2], optimfit$par[3], 40), col = "red", lwd = 2, lty = 4)
 
 lines(truth[1:21], col = "green")
+
+legend("topleft", c("Nelder-Mead", "SANN", "BFGS", "truth"), lty = c(2:4, 1), lwd = 2, col = c("red", "red","red", "green"))
+
 ```
 
 
-# Uncertainty around the optimum 
+### Uncertainty around the optimum 
 
 We can get a basic estimate of the uncertainty around the optimum by looking at the hessian, which is calculated by the optim function 
 
@@ -150,7 +141,7 @@ I don't think these options have a general name. In a statistical context where 
 
 Option 1 is conveniently done by the bblme package.
 
-```{r}
+```{r, fig.height=7, fig.width = 7}
 library(bbmle)
 objective2 <- function(N0, r, K) objective(c(N0,r,K))
 fit <- mle2(objective2,list(N0=1,r=1.3,K=40))
@@ -165,7 +156,7 @@ For option 3, see MCMC sampling below. I leave out option 2.
 
 
 
-# More powerful optimization algorithms in R
+### More powerful optimization algorithms in R
 
 * optimx: A Replacement and Extension of the optim() Function http://cran.r-project.org/web/packages/optimx/index.html
 
@@ -174,10 +165,9 @@ For option 3, see MCMC sampling below. I leave out option 2.
 * CRAN Task view optimization with a lot more packages http://cran.r-project.org/web/views/Optimization.html 
 
 
-# Global view on the shape of the objective function via MCMC
+## Global view on the shape of the objective function via MCMC
 
 A disadvantage of optimization is that we don't get a global view of the objective function that we optimize, 
-
 
 ```{r}
 
@@ -205,8 +195,6 @@ run_metropolis_MCMC <- function(startvalue, iterations){
 }
 ```
 
-
-
 Let's run the algorithm 
 
 ```{r}
@@ -216,9 +204,11 @@ chain = run_metropolis_MCMC(startvalue, 100000)
 
 Plotting the development in the chain an the marginal parameter distributions
 
-```{r}
+```{r, fig.height=7, fig.width = 7}
 plot(chain)
 ```
+
+### Correlations between parameters 
 
 
 To see correlations between parameters, we have to do a bit more. I'm loading a function from me to have a better plotting option. You need the 
@@ -228,30 +218,38 @@ library(devtools)
 source_url('https://raw.githubusercontent.com/florianhartig/LearningBayes/master/CommentedCode/02-Samplers/Analysis/MCMC_PlottingOptions.r')
 ```
 
-```{r}
+```{r, fig.height=7, fig.width = 7}
 #For plotting run 
 burnIn = 10000
 betterPairs(chain[-(1:burnIn),])
 ```
 
 
-# Forwarding of the parametric uncertainty to our predictions 
+### Forwarding of the parametric uncertainty to our predictions 
 
 
-```{r}
+```{r, fig.height=7, fig.width = 7}
 
 plot(data, xlim = c(0,40), ylim = c(0,20))
 
 for (i in 1:1000){
   
-  pars = chain[10000+50*i,]
+  pars = chain[10000+90*i,]
   
-  lines(model(pars[1], pars[2], pars[3], 40), col="#44444404", lwd = 10)
+  lines(model(pars[1], pars[2], pars[3], 40), col="#73A9D803", lwd = 4)
   
 }
 
-lines(model(optimfit$par[1], optimfit$par[2], optimfit$par[3], 40), col = "red", lwd = 1)
-points(data, col = "red")
-lines(truth, col = "green")
+lines(model(optimfit$par[1], optimfit$par[2], optimfit$par[3], 40), col = "red", lwd = 3)
+points(data)
+lines(truth, col = "green", lwd = 3)
+
+
+legend("topleft", c("optimization", "posterior predictive", "truth"), lwd = 2, col = c("red", "#73A9D8", "green"))
+
 
 ```
+
+
+---
+**Copyright, reuse and updates**: By Florian Hartig. Updates will be posted at https://github.com/florianhartig/LearningBayes. Reuse permitted under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
