--- a/CommentedCode/01-Principles/priors.Rmd
+++ b/CommentedCode/01-Principles/priors.Rmd
@@ -5,6 +5,7 @@ date: "9 May 2015"
 output:
   html_document:
     keep_md: yes
+  pdf_document: default
 ---
 
 ```{r global_options, include=FALSE}
