updates ABC and optima

--- a/CommentedCode/02-Samplers/Optimization/FittingModelOptim.Rmd
+++ b/CommentedCode/02-Samplers/Optimization/FittingModelOptim.Rmd
@@ -40,7 +40,8 @@ For convenience, I create our data simply from the model and add some noise
 ```{r}
 truth <- model(r = 0.25, K = 70, timesteps=100) 
 data <- truth[1:21] + 2 * rnorm(21) * rexp(21)
-plot(data, ylab = "Time", xlab ="Size")
+plot(data, xlab = "Time", ylab ="Size")
+lines(truth, col = "green")
 ```
 
 For the noise, I have deliberately chosen not a normal distribution, but something that has more heavy tails to get a few "outliers".
@@ -92,7 +93,7 @@ optimfit
 
 # plotting the results
 
-plot(data, xlim = c(0,20), ylim = c(0,20))
+plot(data, xlim = c(0,20), ylim = c(0,20), xlab = "Time", ylab ="Size")
 
 lines(model(optimfit$par[1], optimfit$par[2], optimfit$par[3], 40), col = "red", lwd = 2)
 
@@ -104,7 +105,7 @@ Look at the help in optim and change the optimization algorithm. Do the results 
 
 
 ```{r}
-plot(data, xlim = c(0,20), ylim = c(0,20))
+plot(data, xlim = c(0,20), ylim = c(0,20), xlab = "Time", ylab ="Size")
 
 optimfit <- optim(c(1,1.3,40), objective, method = "Nelder-Mead")
 lines(model(optimfit$par[1], optimfit$par[2], optimfit$par[3], 40), col = "red", lwd = 2, lty = 2)
@@ -230,7 +231,7 @@ betterPairs(chain[-(1:burnIn),])
 
 ```{r, fig.height=7, fig.width = 7}
 
-plot(data, xlim = c(0,40), ylim = c(0,20))
+plot(data, xlim = c(0,40), ylim = c(0,20), xlab = "Time", ylab ="Size")
 
 for (i in 1:1000){
   
@@ -249,6 +250,15 @@ legend("topleft", c("optimization", "posterior predictive", "truth"), lwd = 2, c
 
 
 ```
+
+
+### Exercises
+
+Run the code until the different optimization algorithms
+
+1. Make sure you understand what we are doing 
+2. Change the objective function and compare
+3. Change the optimization algorithm and compare
 
 
 ---
