--- a/courses/15-Leipzig.Rmd
+++ b/courses/15-Leipzig.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Information for participants Bayes course Leipzig '15"
+title: "Information for participants of the course \"Introduction to Bayesian Statistics\" Leipzig '15"
 author: "Florian Hartig"
 date: "3 Jun 2015"
 output:
