updates / scripts felix

--- a/CommentedCode/05-HierarchicalAndSpatialModels/Basics/hierarchicalExample2Distributions.Rmd
+++ b/CommentedCode/05-HierarchicalAndSpatialModels/Basics/hierarchicalExample2Distributions.Rmd
@@ -12,14 +12,13 @@ output:
 set.seed(123)
 rm(list=ls(all=TRUE))
 library(rjags)
+library(R2jags)
 ```
 
 
 ## Creation of the data
 
-Assume the data is created from an ecological system that creates an exponential size distribution (e.g. you sample individuals from a population that can be expected to follow this distribution), but this measurments are done with a considerable lognormal observation error.
-
-For a realistic application see http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0058036
+Assume we observe data from an ecological system that creates an exponential size distribution (e.g. tree sizes, see [Taubert, F.; Hartig, F.; Dobner, H.-J. & Huth, A. (2013) On the Challenge of Fitting Tree Size Distributions in Ecology. PLoS ONE, 8, e58036-](http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0058036)), but our measurments are performed with a substantial lognormal observation error
 
 ```{r}
 meanSize <- 10
@@ -37,7 +36,8 @@ counts <- rbind(
   obs = hist(observations, breaks = 0:maxV, plot = F)$counts,
   true = hist(truevalues, breaks = 0:maxV, plot = F)$counts
 )
-barplot(t(counts), beside=T)
+barplot(log(t(counts)+1), beside=T)
+
 ```
 
 
@@ -45,8 +45,6 @@ barplot(t(counts), beside=T)
 
 
 Model specification of a non-hierarchical model in JAGS that does not account for the observation error 
-
-
 
 ```{r}
 normalModel = textConnection('
